--- a/src/input.css
+++ b/src/input.css
@@ -32,3 +32,32 @@ body{
     @apply -rotate-45;
 }
 
+.category nav {
+    display: flex;
+    justify-content: center;
+}
+
+.category .items {
+    display: flex;
+    max-width: 720px;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.items span {
+    padding: 7px 25px;
+    font-size: 18px;
+    font-weight: 500;
+    cursor: pointer;
+    color: #007bff;
+    border-radius: 50px;
+    border: 2px solid #007bff;
+    transition: all 0.3s ease;
+}
+
+.items span.active,
+.items span:hover {
+    color: #fff;
+    background: #007bff;
+}
+
